syntax = "proto3";
option java_multiple_files = true;
package com.example.demo;

message EventRequest {
  string event = 1;
}

message EventResponse {
  string response = 1;
}

service EventService {
  rpc logevent(EventRequest) returns (EventResponse);
}

